fix: create logic for new GUI